# planarviz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/planarviz-demo/: main.cpp
cmake/modules/: SetupShaders.cmake
libs/: CMakeLists.txt
libs/planarviz/: CMakeLists.txt
libs/planarviz/include/: Camera.h  Color.h  Constants.h  Geometry.h  LocalizationDemo.h  PlanarVizApplication.h  Scene.h  Shader.h  Texture.h  Utils.h  WindowApplication.h  _ImGui.h  planarviz.h  planarviz_bundled_shaders.h
libs/planarviz/src/: Camera.cpp  Geometry.cpp  LocalizationDemo.cpp  PlanarVizApplication.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Utils.cpp  WindowApplication.cpp
resources/polygons/: example.json
resources/shaders/: default.fs  default.vs
scripts/: build.sh  clean.sh  install.sh  uninstall.sh
